# ideanator

./: .coverage  FixCode.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
prompts/: validate.yml
src/ideanator/: __init__.py  cli.py  config.py  exceptions.py  llm.py  models.py  parser.py  phases.py  pipeline.py  prompts.py  refactor.py  scorer.py  types.py
src/ideanator/data/: prompts.yaml
src/ideanator/data/prompts/: extract.yml  synthesize.yml
src/ideanator/tui/: __init__.py  app.py  messages.py  theme.tcss  worker.py
src/ideanator/tui/screens/: __init__.py  batch_pipeline.py  batch_setup.py  idea_input.py  pipeline.py  settings.py  synthesis.py  welcome.py
src/ideanator/tui/widgets/: __init__.py  conversation_view.py  dimension_tracker.py  message_bubble.py  phase_indicator.py
tests/: conftest.py  test_backends.py  test_cli.py  test_config.py  test_exceptions.py  test_parser.py  test_phases.py  test_pipeline.py  test_prompts.py  test_refactor.py  test_scorer.py  test_tui.py  test_tui_messages.py  test_tui_settings.py  test_tui_worker.py
