[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ideanator"
version = "0.2.0"
description = "ARISE pipeline — develop vague ideas through structured questioning using a local LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Hamza" },
]
keywords = ["ideas", "brainstorming", "llm", "arise", "questioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "httpx>=0.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.1"]
tui = ["textual>=0.50"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "mypy",
    "textual-dev",
]

[project.scripts]
ideanator = "ideanator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ideanator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
